Sticky navbar, fixed toggling and moved search outside of collapse.

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -50,7 +50,6 @@ a {
   background-color: $header-bg-color;
   background-image: linear-gradient(360deg, $header-bg-color, $header-bg-color-secondary);
   min-height: 400px;
-  border-top: 1px #343a40 solid;
 }
 
 .page-header-text-color {
@@ -91,15 +90,31 @@ a {
 }
 
 /* Navigation */
-.nav-link.active {
-  color: $header-heading-color !important;
-  background-color: $header-bg-color-secondary !important;
-  border-left: 1px #343a40 solid !important;
-  border-top: 1px #343a40 solid !important;
-  border-right: 1px #343a40 solid !important;
+.navbar-container {
+  background-color: white;
+  border-bottom: 1px $theme-black solid;
+}
+
+.nav-item-customizer {
+  color: $header-heading-color;
+  background-color: $header-bg-color-secondary;
+  border-left: 1px $theme-black solid;
+  border-top: 1px $theme-black solid;
+  border-right: 1px $theme-black solid;
   position: relative;
   top: 1.4px;
-  border-bottom: 1px $header-bg-color-secondary !important;
+  border-bottom: 1px $header-bg-color-secondary;
+  border-radius: .3em .3em 0em 0em;
+}
+
+.nav-item-customizer-collapsed {
+  background-color: white;
+  border: 0px;
+  color: $header-heading-color;
+}
+
+.nav-link-customizer {
+  color: $theme-black;
 }
 
 /* Removes the bottom grey border form the nav-tabs */
