--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -14,3 +14,4 @@ $border-color: #358ccb !default;
 
 /* Other */
 $theme-gray: #ced4da;
+$theme-black: #343a40;
